fix swagger config

--- a/taskboard/package.json
+++ b/taskboard/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx prisma generate"
+    "postinstall": "npx prisma generate",
+    "generate-docs": "node generate-swagger.js"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
@@ -28,6 +29,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/swagger-jsdoc": "^6.0.4",
+    "next-swagger-doc": "^0.4.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
