--- a/mcp-agent-service/Dockerfile
+++ b/mcp-agent-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.11-slim
 
-# Install Node.js and gettext (for envsubst)
-RUN apt-get update && apt-get install -y curl gettext-base && \
+# Install Node.js for mcp-remote
+RUN apt-get update && apt-get install -y curl && \
     curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
     apt-get install -y nodejs && \
     apt-get clean && \
@@ -16,4 +16,4 @@ COPY . .
 
 EXPOSE 8085
 
-CMD ["./start.sh"]
+CMD ["python", "main.py"]
